css bugs overflow right-side

--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ h1{
 .btn-me button:hover{
     color: black;
     background-color: #478540;
-    transition: 0.4s;
+    transition: 0.2s;
 }
 
 .btn-me button:active{
@@ -315,6 +315,8 @@ h1{
 @media screen and (max-width: 768px){
     body{
         font-size: 14px;
+        display: block;
+        margin: 0 auto;
     }
     .me-me h3{
         margin: 10px;
@@ -342,6 +344,9 @@ h1{
 @media screen and (max-width: 680px){
     body{
         font-size: 5px;
+        display: block;
+margin: 0 auto;
+
     }
 
     
